--- a/_locales/ja/SuperBit-strings.json
+++ b/_locales/ja/SuperBit-strings.json
@@ -1,6 +1,6 @@
 {
   "SuperBit.RGB_Program|block": "RGB_Program",
-  "SuperBit.Music|block": "音楽(%index|)を鳴らす ",
+  "SuperBit.Music|block": "音楽(%index|)を鳴らす",
   "SuperBit.Servo|block":  "サーボモーター(180°) No. %num|を %value|° 動かす",
   "SuperBit.Servo2|block": "サーボモーター(270°) No. %num|を %value|° 動かす",
   "SuperBit.Servo3|block": "サーボモーター(360°) No. %num|を %pos|に %value|° 動かす",
@@ -8,6 +8,6 @@
   "SuperBit.enPos.reverse|block":"逆方向",
   "SuperBit.enPos.stop|block":"停止",
   "SuperBit.MotorRun|block": " DCモーター(%index|)を速度(-255~255) %speed|で動かす",
-  "SuperBit.MotorRunDual|block": "DCモーター(%motor1|)を速度(-255~255) %speed1|、DCモーター(%motor2|)を速度(-255~255) %speed2|で動かす",
+  "SuperBit.MotorRunDual|block": "DCモーター1(%motor1|)を速度(-255~255) %speed1|、DCモーター2(%motor2|)を速度(-255~255) %speed2|で動かす",
   "SuperBit.MotorStopAll|block": "DCモーターを止める"
 }
